apps/external-services/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-services
  labels:
    app.kubernetes.io/name: external-services
