apps/external-services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-http
  namespace: external-services
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
